@@ -8,12 +8,10 @@
 package com.rte_france.trm_algorithm;
 
 import com.powsybl.iidm.network.Network;
-import com.rte_france.trm_algorithm.operational_conditions_aligners.ExchangeAligner;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -23,20 +21,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
  * @author Viktor Terrier {@literal <viktor.terrier at rte-france.com>}
  */
 class TrmExporterTest {
-
     @Test
     void testEmptyExport() throws IOException {
         ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
-        TrmResults.Builder builder = TrmResults.getBuilder();
-        builder.addUncertainties(Collections.emptyMap());
-        builder.addCracAlignmentResults(Collections.emptyMap());
-        builder.addPstAlignmentResults(Collections.emptyMap());
-        ExchangeAligner.Result.Builder exchangeAlignerResultBuilder = ExchangeAligner.Result.getBuilder();
-        exchangeAlignerResultBuilder.addExchangeAlignerStatus(ExchangeAligner.Status.FAILED);
-        exchangeAlignerResultBuilder.addInitialMarketBasedNetPositions(Collections.emptyMap());
-        exchangeAlignerResultBuilder.addReferenceNetPositions(Collections.emptyMap());
-        builder.addExchangeAlignerResult(exchangeAlignerResultBuilder.build());
-        TrmResults trmResult = builder.build();
+        TrmResults trmResult = TestUtils.mockTrmResults().build();
 
         TrmExporter.export(outputStream, trmResult);
 
@@ -47,22 +35,15 @@ class TrmExporterTest {
     void testOneRow() throws IOException {
         Network network = TestUtils.importNetwork("simple_networks/NETWORK_SINGLE_LOAD_TWO_GENERATORS_WITH_COUNTRIES.uct");
         ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
-        TrmResults.Builder builder = TrmResults.getBuilder();
-        builder.addUncertainties(Map.of("toto", new UncertaintyResult(network.getBranch("FGEN1 11 BLOAD 11 1"), 100., 112., -1.)));
-        builder.addCracAlignmentResults(Collections.emptyMap());
-        builder.addPstAlignmentResults(Collections.emptyMap());
-        ExchangeAligner.Result.Builder exchangeAlignerResultBuilder = ExchangeAligner.Result.getBuilder();
-        exchangeAlignerResultBuilder.addExchangeAlignerStatus(ExchangeAligner.Status.FAILED);
-        exchangeAlignerResultBuilder.addInitialMarketBasedNetPositions(Collections.emptyMap());
-        exchangeAlignerResultBuilder.addReferenceNetPositions(Collections.emptyMap());
-        builder.addExchangeAlignerResult(exchangeAlignerResultBuilder.build());
-        TrmResults trmResult = builder.build();
+        TrmResults trmResult = TestUtils.mockTrmResults()
+            .addUncertainties(Map.of("toto", new UncertaintyResult(network.getBranch("FGEN1 11 BLOAD 11 1"), 100., 112., -1.)))
+            .build();
 
         TrmExporter.export(outputStream, trmResult);
 
         assertEquals("""
                 Branch ID;Uncertainty;Market-based flow;Reference flow;Zonal PTDF
                 toto;12.0;100.0;112.0;-1.0""",
-                outputStream.toString());
+            outputStream.toString());
     }
 }
